bindings/rust/idax-sys/shim/idax_shim.h

/* ═══════════════════════════════════════════════════════════════════════════
 * Address navigation history (ida::navigation)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef void* IdaxNavigationHistoryHandle;
typedef struct IdaxNavigationEntry {
    uint64_t address;
    char* channel;
    char* metadata;
} IdaxNavigationEntry;
int idax_navigation_history_open(const char* name,
                                 const IdaxNavigationEntry* initial,
                                 IdaxNavigationHistoryHandle* out);
void idax_navigation_history_free(IdaxNavigationHistoryHandle history);
int idax_navigation_history_name(IdaxNavigationHistoryHandle history,
                                 char** out);
int idax_navigation_history_created(IdaxNavigationHistoryHandle history,
                                    int* out);
int idax_navigation_history_entries(IdaxNavigationHistoryHandle history,
                                    IdaxNavigationEntry** out, size_t* count);
int idax_navigation_history_size(IdaxNavigationHistoryHandle history,
                                 size_t* out);
int idax_navigation_history_index(IdaxNavigationHistoryHandle history,
                                  size_t* out);
int idax_navigation_history_current(IdaxNavigationHistoryHandle history,
                                    IdaxNavigationEntry* out);
int idax_navigation_history_current_for(IdaxNavigationHistoryHandle history,
                                        const char* channel,
                                        IdaxNavigationEntry* out,
                                        int* has_value);
int idax_navigation_history_all_current(IdaxNavigationHistoryHandle history,
                                        IdaxNavigationEntry** out,
                                        size_t* count);
int idax_navigation_history_set_current(IdaxNavigationHistoryHandle history,
                                        const IdaxNavigationEntry* entry,
                                        int record_in_history);
int idax_navigation_history_push(IdaxNavigationHistoryHandle history,
                                 const IdaxNavigationEntry* entry,
                                 IdaxNavigationEntry* out);
int idax_navigation_history_seek(IdaxNavigationHistoryHandle history,
                                 size_t index, IdaxNavigationEntry* out);
int idax_navigation_history_back(IdaxNavigationHistoryHandle history,
                                 size_t count, IdaxNavigationEntry* out,
                                 int* has_value);
int idax_navigation_history_forward(IdaxNavigationHistoryHandle history,
                                    size_t count, IdaxNavigationEntry* out,
                                    int* has_value);
int idax_navigation_history_replace(IdaxNavigationHistoryHandle history,
                                    size_t index,
                                    const IdaxNavigationEntry* entry);
int idax_navigation_history_clear(IdaxNavigationHistoryHandle history,
                                  const IdaxNavigationEntry* new_tip);
int idax_navigation_history_transfer_channel_to(
    IdaxNavigationHistoryHandle source,
    IdaxNavigationHistoryHandle destination,
    const char* channel,
    int retain_history);
void idax_navigation_entry_free(IdaxNavigationEntry* entry);
void idax_navigation_entries_free(IdaxNavigationEntry* entries, size_t count);
/* ═══════════════════════════════════════════════════════════════════════════
 * Register-value tracking (ida::registers)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef struct IdaxRegisterValueOrigin {
    uint64_t address;
    uint16_t instruction_code;
    int short_instruction;
    int program_counter_based;
    int global_offset_table_like;
} IdaxRegisterValueOrigin;
typedef struct IdaxRegisterValueCandidate {
    int has_constant;
    uint64_t constant;
    int has_stack_pointer_delta;
    int64_t stack_pointer_delta;
    IdaxRegisterValueOrigin origin;
} IdaxRegisterValueCandidate;
typedef struct IdaxTrackedRegisterValue {
    int32_t state;
    IdaxRegisterValueCandidate* candidates;
    size_t candidate_count;
    int has_cause;
    IdaxRegisterValueOrigin cause;
    int has_aborting_depth;
    int32_t aborting_depth;
    char* description;
} IdaxTrackedRegisterValue;
typedef struct IdaxNearestRegisterValue {
    size_t selected_index;
    char* register_name;
    IdaxTrackedRegisterValue value;
} IdaxNearestRegisterValue;
int idax_registers_track(uint64_t address, const char* register_name,
                         int max_depth, IdaxTrackedRegisterValue* out);
int idax_registers_constant_at(uint64_t address, const char* register_name,
                               int max_depth, uint64_t* out, int* has_value);
int idax_registers_stack_delta_at(uint64_t address, const char* register_name,
                                  int64_t* out, int* has_value);
int idax_registers_nearest_at(uint64_t address, const char* first_register,
                              const char* second_register,
                              IdaxNearestRegisterValue* out, int* has_value);
int idax_registers_clear_control_flow_cache(void);
int idax_registers_clear_data_reference_cache(void);
int idax_registers_control_flow_reference_changed(
    uint64_t from, uint64_t to, int mutation);
int idax_registers_data_reference_changed(uint64_t to, int mutation);
void idax_registers_tracked_value_free(IdaxTrackedRegisterValue* value);
void idax_registers_nearest_value_free(IdaxNearestRegisterValue* value);